--- a/frontend/my-posts.html
+++ b/frontend/my-posts.html
@@ -39,6 +39,25 @@
         </div>
     </main>
 
+    <!-- Edit Post Modal -->
+    <div id="editPostModal" class="modal">
+        <div class="modal-content">
+            <span class="close-modal">&times;</span>
+            <h3><i class="fas fa-edit"></i> Edit Your Post</h3>
+            <p>Update the description of your community problem.</p>
+            <form id="editPostForm">
+                <div class="form-group">
+                    <textarea id="editPostText" maxlength="500" required></textarea>
+                    <div id="editCharCount" class="char-count">0/500</div>
+                </div>
+                <div class="modal-actions">
+                    <button type="submit" class="btn-primary">Save Changes</button>
+                    <button type="button" class="btn-cancel close-modal">Cancel</button>
+                </div>
+            </form>
+        </div>
+    </div>
+
     <script src="js/auth.js"></script>
     <script src="js/api.js"></script>
     <script src="js/posts.js"></script>
